@@ -1,6 +1,9 @@
 Version 1.4.4 (??/??/??) "blah"
   * Now, when a user selects a single task, the palette menu expands to allow the use to modify the
     split and join decorators for the task, without having to go to the popup menu for the task.
+  * Fixed a bug where a graph that was scaled would stop the user from being able to draw flows between elements.
+  * The upgrade to 5.9.2 of JGraph broke certain cut and paste behaviour.  This is now fixed to work with the 
+    latest JGraph.
 
 Version 1.4.3 (25/08/2006) "Deltapoint"
   * There is now a new palette menu item allowing users to drag the visible window of a 
